--- a/CodeFinal.ipynb
+++ b/CodeFinal.ipynb
@@ -2,13 +2,88 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "vscode": {
-          "languageId": "plaintext"
+      "execution_count": 14,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Epoch 1/100\n",
+            "1/1 [==============================] - 1s 671ms/step - loss: 264.8434 - mae: 13.7992 - val_loss: 206.6971 - val_mae: 14.3712\n",
+            "Epoch 2/100\n",
+            "1/1 [==============================] - 0s 22ms/step - loss: 210.2643 - mae: 12.0732 - val_loss: 183.7635 - val_mae: 13.5434\n",
+            "Epoch 3/100\n",
+            "1/1 [==============================] - 0s 24ms/step - loss: 212.6818 - mae: 12.3393 - val_loss: 164.2069 - val_mae: 12.7888\n",
+            "Epoch 4/100\n",
+            "1/1 [==============================] - 0s 24ms/step - loss: 222.9544 - mae: 12.1920 - val_loss: 144.8345 - val_mae: 11.9909\n",
+            "Epoch 5/100\n",
+            "1/1 [==============================] - 0s 24ms/step - loss: 181.0749 - mae: 11.0743 - val_loss: 128.5304 - val_mae: 11.2673\n",
+            "Epoch 6/100\n",
+            "1/1 [==============================] - 0s 22ms/step - loss: 160.9219 - mae: 10.5085 - val_loss: 117.5420 - val_mae: 10.7557\n",
+            "Epoch 7/100\n",
+            "1/1 [==============================] - 0s 24ms/step - loss: 157.1738 - mae: 10.7923 - val_loss: 107.3874 - val_mae: 10.2587\n",
+            "Epoch 8/100\n",
+            "1/1 [==============================] - 0s 27ms/step - loss: 152.6450 - mae: 10.9608 - val_loss: 97.9224 - val_mae: 9.7757\n",
+            "Epoch 9/100\n",
+            "1/1 [==============================] - 0s 23ms/step - loss: 120.5188 - mae: 9.3175 - val_loss: 89.2468 - val_mae: 9.3104\n",
+            "Epoch 10/100\n",
+            "1/1 [==============================] - 0s 26ms/step - loss: 121.9421 - mae: 9.1077 - val_loss: 81.2359 - val_mae: 8.8597\n",
+            "Epoch 11/100\n",
+            "1/1 [==============================] - 0s 25ms/step - loss: 111.7683 - mae: 9.7087 - val_loss: 73.6751 - val_mae: 8.4081\n",
+            "Epoch 12/100\n",
+            "1/1 [==============================] - 0s 24ms/step - loss: 104.0705 - mae: 9.2189 - val_loss: 66.2864 - val_mae: 7.9400\n",
+            "Epoch 13/100\n",
+            "1/1 [==============================] - 0s 23ms/step - loss: 92.2643 - mae: 8.3290 - val_loss: 59.2092 - val_mae: 7.4607\n",
+            "Epoch 14/100\n",
+            "1/1 [==============================] - 0s 24ms/step - loss: 82.2256 - mae: 7.8347 - val_loss: 52.8586 - val_mae: 6.9919\n",
+            "Epoch 15/100\n",
+            "1/1 [==============================] - 0s 24ms/step - loss: 63.7895 - mae: 7.4604 - val_loss: 46.6687 - val_mae: 6.4985\n",
+            "Epoch 16/100\n",
+            "1/1 [==============================] - 0s 24ms/step - loss: 74.1857 - mae: 7.8727 - val_loss: 41.0196 - val_mae: 5.9907\n",
+            "Epoch 17/100\n",
+            "1/1 [==============================] - 0s 25ms/step - loss: 63.7068 - mae: 7.1910 - val_loss: 36.3818 - val_mae: 5.4774\n",
+            "Epoch 18/100\n",
+            "1/1 [==============================] - 0s 25ms/step - loss: 44.2896 - mae: 5.7033 - val_loss: 31.7348 - val_mae: 4.9042\n",
+            "Epoch 19/100\n",
+            "1/1 [==============================] - 0s 24ms/step - loss: 50.7887 - mae: 5.8911 - val_loss: 27.5633 - val_mae: 4.2938\n",
+            "Epoch 20/100\n",
+            "1/1 [==============================] - 0s 23ms/step - loss: 56.5990 - mae: 7.0133 - val_loss: 24.6644 - val_mae: 4.3287\n",
+            "Epoch 21/100\n",
+            "1/1 [==============================] - 0s 24ms/step - loss: 65.8928 - mae: 6.5955 - val_loss: 23.2303 - val_mae: 4.4149\n",
+            "Epoch 22/100\n",
+            "1/1 [==============================] - 0s 28ms/step - loss: 63.6515 - mae: 7.3145 - val_loss: 22.6441 - val_mae: 4.5192\n",
+            "Epoch 23/100\n",
+            "1/1 [==============================] - 0s 24ms/step - loss: 45.1694 - mae: 5.5327 - val_loss: 22.6413 - val_mae: 4.6336\n",
+            "Epoch 24/100\n",
+            "1/1 [==============================] - 0s 23ms/step - loss: 39.3285 - mae: 5.5944 - val_loss: 23.3711 - val_mae: 4.7722\n",
+            "Epoch 25/100\n",
+            "1/1 [==============================] - 0s 25ms/step - loss: 52.3521 - mae: 6.4478 - val_loss: 24.6904 - val_mae: 4.9417\n",
+            "Epoch 26/100\n",
+            "1/1 [==============================] - 0s 25ms/step - loss: 72.4663 - mae: 7.4960 - val_loss: 26.6376 - val_mae: 5.1376\n",
+            "Epoch 27/100\n",
+            "1/1 [==============================] - 0s 25ms/step - loss: 40.0280 - mae: 4.6405 - val_loss: 28.8143 - val_mae: 5.3446\n",
+            "Epoch 28/100\n",
+            "1/1 [==============================] - 0s 33ms/step - loss: 57.5429 - mae: 6.9239 - val_loss: 31.3706 - val_mae: 5.5604\n",
+            "Epoch 29/100\n",
+            "1/1 [==============================] - 0s 25ms/step - loss: 41.5854 - mae: 5.5247 - val_loss: 33.9127 - val_mae: 5.7537\n",
+            "Epoch 30/100\n",
+            "1/1 [==============================] - 0s 25ms/step - loss: 57.4513 - mae: 6.4005 - val_loss: 36.9242 - val_mae: 5.9510\n",
+            "Epoch 31/100\n",
+            "1/1 [==============================] - 0s 25ms/step - loss: 42.1491 - mae: 6.0824 - val_loss: 39.6603 - val_mae: 6.0953\n",
+            "Epoch 32/100\n",
+            "1/1 [==============================] - 0s 25ms/step - loss: 57.7792 - mae: 6.4125 - val_loss: 42.2900 - val_mae: 6.2242\n",
+            "Epoch 33/100\n",
+            "1/1 [==============================] - 0s 24ms/step - loss: 34.4424 - mae: 5.0629 - val_loss: 44.9917 - val_mae: 6.3413\n",
+            "1/1 [==============================] - 0s 41ms/step\n",
+            "1/1 [==============================] - 0s 15ms/step\n",
+            "1/1 [==============================] - 0s 15ms/step\n",
+            "1/1 [==============================] - 0s 17ms/step\n",
+            "1/1 [==============================] - 0s 15ms/step\n",
+            "1/1 [==============================] - 0s 15ms/step\n"
+          ]
         }
-      },
-      "outputs": [],
+      ],
       "source": [
         "import os\n",
         "import pandas as pd\n",
@@ -16,11 +91,12 @@
         "import tensorflow as tf\n",
         "from tensorflow import keras\n",
         "from sklearn.model_selection import train_test_split\n",
-        "import webbrowser\n",
         "from openpyxl.worksheet.dimensions import DimensionHolder, ColumnDimension\n",
+        "from keras.models import load_model\n",
+        "\n",
+        "modelito = load_model('my_single_model.h5')\n",
         "\n",
         "def ajustar_valores(valor):\n",
-        "    \"\"\"Convierte el valor a float y lo ajusta en el rango [0, 20]. Si no es convertible, devuelve 0.\"\"\"\n",
         "    try:\n",
         "        valor = float(valor)\n",
         "        return max(0, min(20, valor))\n",
@@ -28,21 +104,15 @@
         "        return 0\n",
         "\n",
         "def procesar_hoja(df, nombre_hoja):\n",
-        "    \"\"\"Procesa la hoja del Excel ajustando los valores de las notas.\"\"\"\n",
         "    if df.empty:\n",
         "        return f\"Error: La hoja '{nombre_hoja}' está completamente vacía.\"\n",
-        "\n",
         "    df.iloc[:, 1:] = df.iloc[:, 1:].applymap(ajustar_valores)\n",
         "    return df\n",
         "\n",
         "def guardar_en_excel(df_predicciones):\n",
-        "    \"\"\"Guarda el DataFrame de predicciones en un archivo Excel y lo abre automáticamente.\"\"\"\n",
-        "    file_path = \"resultados_predicciones.xlsx\"\n",
-        "\n",
+        "    file_path = \"resultados_predicciones_unico_modelo.xlsx\"\n",
         "    with pd.ExcelWriter(file_path, engine='openpyxl') as writer:\n",
         "        df_predicciones.to_excel(writer, sheet_name=\"ACADEMAI\", index=False)\n",
-        "        \n",
-        "        # Ajustar automáticamente el tamaño de las columnas\n",
         "        for column in writer.sheets[\"ACADEMAI\"].columns:\n",
         "            max_length = 0\n",
         "            column = [cell for cell in column]\n",
@@ -55,77 +125,55 @@
         "            adjusted_width = (max_length + 2)\n",
         "            writer.sheets[\"ACADEMAI\"].column_dimensions[column[0].column_letter].width = adjusted_width\n",
         "\n",
-        "# Nombre del archivo Excel específico\n",
-        "nombre_archivo = \"Modelo_Excel.xlsx\"\n",
-        "\n",
         "try:\n",
-        "    # Leer todas las hojas del archivo Excel\n",
+        "    nombre_archivo = \"Modelo_Excel.xlsx\"\n",
         "    hojas = pd.read_excel(nombre_archivo, sheet_name=None, engine='openpyxl')\n",
         "    dfs = []\n",
         "\n",
-        "    # Procesar cada hoja ajustando los valores\n",
         "    for nombre_hoja, df in hojas.items():\n",
-        "        print(f\"Procesando hoja: {nombre_hoja}\")\n",
         "        df = procesar_hoja(df, nombre_hoja)\n",
         "        dfs.append(df)\n",
         "\n",
-        "    # Crear un DataFrame para las predicciones con la columna 'Alumno'\n",
         "    df_predicciones = dfs[-1][['Alumno']].copy()\n",
+        "    X = []\n",
+        "    y = []\n",
         "\n",
-        "    # Entrenar el modelo y predecir para cada curso\n",
-        "    for curso in dfs[0].columns[1:]:\n",
-        "        print(f\"Entrenando modelo para: {curso}\")\n",
-        "\n",
-        "        X = []\n",
-        "        y = []\n",
-        "\n",
-        "        # Recopilar datos de entrenamiento: Características y objetivos\n",
-        "        for idx, df in enumerate(dfs[:-1]):\n",
-        "            features = df.drop(columns=[\"Alumno\"]).values.tolist()\n",
+        "    for idx, df in enumerate(dfs[:-1]):\n",
+        "        features = df.drop(columns=[\"Alumno\"]).values.tolist()\n",
+        "        for curso in dfs[0].columns[1:]:\n",
         "            targets = dfs[idx+1][curso].values\n",
         "            X.extend(features)\n",
         "            y.extend(targets)\n",
         "\n",
-        "        X = np.array(X)\n",
-        "        y = np.array(y)\n",
-        "        \n",
-        "        # Dividir datos en entrenamiento y prueba\n",
-        "        X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
-        "        \n",
-        "        # Configuración de la red neuronal profunda\n",
-        "        model = keras.Sequential([\n",
-        "            keras.layers.Dense(128, activation='relu', input_shape=(X_train.shape[1],)),\n",
-        "            keras.layers.Dropout(0.3),\n",
-        "            keras.layers.Dense(64, activation='relu'),\n",
-        "            keras.layers.Dropout(0.2),\n",
-        "            keras.layers.Dense(32, activation='relu'),\n",
-        "            keras.layers.Dense(1)\n",
-        "        ])\n",
-        "        \n",
-        "        model.compile(optimizer='adam', loss='mse', metrics=['mae'])\n",
-        "        \n",
-        "        # Aplicar detención temprana para evitar el sobreajuste\n",
-        "        early_stopping = tf.keras.callbacks.EarlyStopping(monitor='val_loss', patience=10)\n",
-        "        \n",
-        "        model.fit(X_train, y_train, epochs=100, validation_data=(X_test, y_test), callbacks=[early_stopping])\n",
-        "        \n",
-        "        # Predecir para el último grado ingresado\n",
-        "        predicciones = model.predict(dfs[-1].drop(columns=[\"Alumno\"]).values)\n",
-        "        predicciones = np.clip(predicciones, 0, 20)  # Asegurar valores en el rango [0,20]\n",
-        "        df_predicciones[curso + ' Predicted'] = predicciones\n",
+        "    X = np.array(X, dtype=np.float32)\n",
+        "    y = np.array(y, dtype=np.float32)\n",
         "\n",
-        "    # Formatear columnas para que tengan 2 decimales\n",
+        "    model = keras.Sequential([\n",
+        "        keras.layers.Dense(128, activation='relu', input_shape=(X.shape[1],)),\n",
+        "        keras.layers.Dropout(0.3),\n",
+        "        keras.layers.Dense(64, activation='relu'),\n",
+        "        keras.layers.Dropout(0.2),\n",
+        "        keras.layers.Dense(32, activation='relu'),\n",
+        "        keras.layers.Dense(1)\n",
+        "    ])\n",
+        "\n",
+        "    model.compile(optimizer='adam', loss='mse', metrics=['mae'])\n",
+        "    early_stopping = tf.keras.callbacks.EarlyStopping(monitor='val_loss', patience=10)\n",
+        "    model.fit(X, y, epochs=100, validation_split=0.2, callbacks=[early_stopping])\n",
+        "\n",
+        "    for curso in dfs[0].columns[1:]:\n",
+        "        predicciones = modelito.predict(dfs[-1].drop(columns=[\"Alumno\"]).values.astype(np.float32))\n",
+        "        predicciones = np.clip(predicciones, 0, 20)\n",
+        "        df_predicciones[curso + ' Predicted'] = predicciones.flatten()\n",
+        "\n",
         "    for curso in df_predicciones.columns[1:]:\n",
         "        df_predicciones[curso] = df_predicciones[curso].apply(lambda x: round(x, 2))\n",
         "\n",
-        "    # Guardar predicciones en un nuevo archivo Excel\n",
-        "    # guardar_en_excel(df_predicciones)\n",
-        "    \n",
-        "    # Guardar el modelo entrenado en un archivo 'my_model.h5'\n",
-        "    model.save('my_model.h5')\n",
+        "    guardar_en_excel(df_predicciones)\n",
+        "    #model.save('my_single_model.h5')\n",
         "\n",
         "except Exception as e:\n",
-        "    print(f\"Error al leer el archivo: {e}\")"
+        "    print(f\"Error al leer el archivo: {e}\")\n"
       ]
     }
   ],
