--- a/CodeFinal.ipynb
+++ b/CodeFinal.ipynb
@@ -2,85 +2,40 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
+            "Procesando hoja: Grado x\n",
+            "Procesando hoja: Grado xx\n",
+            "Entrenando modelo para: Curso A\n",
+            "Creando un nuevo modelo...\n",
             "Epoch 1/100\n",
-            "1/1 [==============================] - 1s 671ms/step - loss: 264.8434 - mae: 13.7992 - val_loss: 206.6971 - val_mae: 14.3712\n",
+            "1/1 [==============================] - 1s 675ms/step - loss: 143.2603 - mae: 11.9691 - val_loss: 1.2046 - val_mae: 1.0975\n",
             "Epoch 2/100\n",
-            "1/1 [==============================] - 0s 22ms/step - loss: 210.2643 - mae: 12.0732 - val_loss: 183.7635 - val_mae: 13.5434\n",
+            "1/1 [==============================] - 0s 25ms/step - loss: 157.2960 - mae: 12.5418 - val_loss: 2.5363 - val_mae: 1.5926\n",
             "Epoch 3/100\n",
-            "1/1 [==============================] - 0s 24ms/step - loss: 212.6818 - mae: 12.3393 - val_loss: 164.2069 - val_mae: 12.7888\n",
+            "1/1 [==============================] - 0s 24ms/step - loss: 205.1282 - mae: 14.3223 - val_loss: 4.7818 - val_mae: 2.1867\n",
             "Epoch 4/100\n",
-            "1/1 [==============================] - 0s 24ms/step - loss: 222.9544 - mae: 12.1920 - val_loss: 144.8345 - val_mae: 11.9909\n",
+            "1/1 [==============================] - 0s 23ms/step - loss: 183.4641 - mae: 13.5449 - val_loss: 7.6657 - val_mae: 2.7687\n",
             "Epoch 5/100\n",
-            "1/1 [==============================] - 0s 24ms/step - loss: 181.0749 - mae: 11.0743 - val_loss: 128.5304 - val_mae: 11.2673\n",
+            "1/1 [==============================] - 0s 23ms/step - loss: 139.0237 - mae: 11.7908 - val_loss: 11.3427 - val_mae: 3.3679\n",
             "Epoch 6/100\n",
-            "1/1 [==============================] - 0s 22ms/step - loss: 160.9219 - mae: 10.5085 - val_loss: 117.5420 - val_mae: 10.7557\n",
+            "1/1 [==============================] - 0s 22ms/step - loss: 81.9720 - mae: 9.0538 - val_loss: 15.5132 - val_mae: 3.9387\n",
             "Epoch 7/100\n",
-            "1/1 [==============================] - 0s 24ms/step - loss: 157.1738 - mae: 10.7923 - val_loss: 107.3874 - val_mae: 10.2587\n",
+            "1/1 [==============================] - 0s 23ms/step - loss: 82.5704 - mae: 9.0868 - val_loss: 20.5249 - val_mae: 4.5304\n",
             "Epoch 8/100\n",
-            "1/1 [==============================] - 0s 27ms/step - loss: 152.6450 - mae: 10.9608 - val_loss: 97.9224 - val_mae: 9.7757\n",
+            "1/1 [==============================] - 0s 23ms/step - loss: 139.2478 - mae: 11.8003 - val_loss: 26.1609 - val_mae: 5.1148\n",
             "Epoch 9/100\n",
-            "1/1 [==============================] - 0s 23ms/step - loss: 120.5188 - mae: 9.3175 - val_loss: 89.2468 - val_mae: 9.3104\n",
+            "1/1 [==============================] - 0s 24ms/step - loss: 38.0170 - mae: 6.1658 - val_loss: 32.7377 - val_mae: 5.7217\n",
             "Epoch 10/100\n",
-            "1/1 [==============================] - 0s 26ms/step - loss: 121.9421 - mae: 9.1077 - val_loss: 81.2359 - val_mae: 8.8597\n",
+            "1/1 [==============================] - 0s 23ms/step - loss: 42.9205 - mae: 6.5514 - val_loss: 39.8895 - val_mae: 6.3158\n",
             "Epoch 11/100\n",
-            "1/1 [==============================] - 0s 25ms/step - loss: 111.7683 - mae: 9.7087 - val_loss: 73.6751 - val_mae: 8.4081\n",
-            "Epoch 12/100\n",
-            "1/1 [==============================] - 0s 24ms/step - loss: 104.0705 - mae: 9.2189 - val_loss: 66.2864 - val_mae: 7.9400\n",
-            "Epoch 13/100\n",
-            "1/1 [==============================] - 0s 23ms/step - loss: 92.2643 - mae: 8.3290 - val_loss: 59.2092 - val_mae: 7.4607\n",
-            "Epoch 14/100\n",
-            "1/1 [==============================] - 0s 24ms/step - loss: 82.2256 - mae: 7.8347 - val_loss: 52.8586 - val_mae: 6.9919\n",
-            "Epoch 15/100\n",
-            "1/1 [==============================] - 0s 24ms/step - loss: 63.7895 - mae: 7.4604 - val_loss: 46.6687 - val_mae: 6.4985\n",
-            "Epoch 16/100\n",
-            "1/1 [==============================] - 0s 24ms/step - loss: 74.1857 - mae: 7.8727 - val_loss: 41.0196 - val_mae: 5.9907\n",
-            "Epoch 17/100\n",
-            "1/1 [==============================] - 0s 25ms/step - loss: 63.7068 - mae: 7.1910 - val_loss: 36.3818 - val_mae: 5.4774\n",
-            "Epoch 18/100\n",
-            "1/1 [==============================] - 0s 25ms/step - loss: 44.2896 - mae: 5.7033 - val_loss: 31.7348 - val_mae: 4.9042\n",
-            "Epoch 19/100\n",
-            "1/1 [==============================] - 0s 24ms/step - loss: 50.7887 - mae: 5.8911 - val_loss: 27.5633 - val_mae: 4.2938\n",
-            "Epoch 20/100\n",
-            "1/1 [==============================] - 0s 23ms/step - loss: 56.5990 - mae: 7.0133 - val_loss: 24.6644 - val_mae: 4.3287\n",
-            "Epoch 21/100\n",
-            "1/1 [==============================] - 0s 24ms/step - loss: 65.8928 - mae: 6.5955 - val_loss: 23.2303 - val_mae: 4.4149\n",
-            "Epoch 22/100\n",
-            "1/1 [==============================] - 0s 28ms/step - loss: 63.6515 - mae: 7.3145 - val_loss: 22.6441 - val_mae: 4.5192\n",
-            "Epoch 23/100\n",
-            "1/1 [==============================] - 0s 24ms/step - loss: 45.1694 - mae: 5.5327 - val_loss: 22.6413 - val_mae: 4.6336\n",
-            "Epoch 24/100\n",
-            "1/1 [==============================] - 0s 23ms/step - loss: 39.3285 - mae: 5.5944 - val_loss: 23.3711 - val_mae: 4.7722\n",
-            "Epoch 25/100\n",
-            "1/1 [==============================] - 0s 25ms/step - loss: 52.3521 - mae: 6.4478 - val_loss: 24.6904 - val_mae: 4.9417\n",
-            "Epoch 26/100\n",
-            "1/1 [==============================] - 0s 25ms/step - loss: 72.4663 - mae: 7.4960 - val_loss: 26.6376 - val_mae: 5.1376\n",
-            "Epoch 27/100\n",
-            "1/1 [==============================] - 0s 25ms/step - loss: 40.0280 - mae: 4.6405 - val_loss: 28.8143 - val_mae: 5.3446\n",
-            "Epoch 28/100\n",
-            "1/1 [==============================] - 0s 33ms/step - loss: 57.5429 - mae: 6.9239 - val_loss: 31.3706 - val_mae: 5.5604\n",
-            "Epoch 29/100\n",
-            "1/1 [==============================] - 0s 25ms/step - loss: 41.5854 - mae: 5.5247 - val_loss: 33.9127 - val_mae: 5.7537\n",
-            "Epoch 30/100\n",
-            "1/1 [==============================] - 0s 25ms/step - loss: 57.4513 - mae: 6.4005 - val_loss: 36.9242 - val_mae: 5.9510\n",
-            "Epoch 31/100\n",
-            "1/1 [==============================] - 0s 25ms/step - loss: 42.1491 - mae: 6.0824 - val_loss: 39.6603 - val_mae: 6.0953\n",
-            "Epoch 32/100\n",
-            "1/1 [==============================] - 0s 25ms/step - loss: 57.7792 - mae: 6.4125 - val_loss: 42.2900 - val_mae: 6.2242\n",
-            "Epoch 33/100\n",
-            "1/1 [==============================] - 0s 24ms/step - loss: 34.4424 - mae: 5.0629 - val_loss: 44.9917 - val_mae: 6.3413\n",
-            "1/1 [==============================] - 0s 41ms/step\n",
-            "1/1 [==============================] - 0s 15ms/step\n",
-            "1/1 [==============================] - 0s 15ms/step\n",
-            "1/1 [==============================] - 0s 17ms/step\n",
-            "1/1 [==============================] - 0s 15ms/step\n",
-            "1/1 [==============================] - 0s 15ms/step\n"
+            "1/1 [==============================] - 0s 23ms/step - loss: 110.5777 - mae: 10.5156 - val_loss: 47.7243 - val_mae: 6.9083\n",
+            "Error al leer el archivo: Failed to convert a NumPy array to a Tensor (Unsupported object type float).\n"
           ]
         }
       ],
@@ -91,10 +46,6 @@
         "import tensorflow as tf\n",
         "from tensorflow import keras\n",
         "from sklearn.model_selection import train_test_split\n",
-        "from openpyxl.worksheet.dimensions import DimensionHolder, ColumnDimension\n",
-        "from keras.models import load_model\n",
-        "\n",
-        "modelito = load_model('my_single_model.h5')\n",
         "\n",
         "def ajustar_valores(valor):\n",
         "    try:\n",
@@ -110,70 +61,74 @@
         "    return df\n",
         "\n",
         "def guardar_en_excel(df_predicciones):\n",
-        "    file_path = \"resultados_predicciones_unico_modelo.xlsx\"\n",
-        "    with pd.ExcelWriter(file_path, engine='openpyxl') as writer:\n",
-        "        df_predicciones.to_excel(writer, sheet_name=\"ACADEMAI\", index=False)\n",
-        "        for column in writer.sheets[\"ACADEMAI\"].columns:\n",
-        "            max_length = 0\n",
-        "            column = [cell for cell in column]\n",
-        "            for cell in column:\n",
-        "                try:\n",
-        "                    if len(str(cell.value)) > max_length:\n",
-        "                        max_length = len(cell.value)\n",
-        "                except:\n",
-        "                    pass\n",
-        "            adjusted_width = (max_length + 2)\n",
-        "            writer.sheets[\"ACADEMAI\"].column_dimensions[column[0].column_letter].width = adjusted_width\n",
+        "    file_path = \"resultados_predicciones.xlsx\"\n",
+        "    df_predicciones.to_excel(file_path, sheet_name=\"Predicciones\", index=False)\n",
+        "\n",
+        "modelo_guardado_path = 'my_model.h5'\n",
+        "model_existente = os.path.exists(modelo_guardado_path)\n",
+        "\n",
+        "if model_existente:\n",
+        "    print(\"Cargando modelo existente...\")\n",
+        "    model = keras.models.load_model(modelo_guardado_path)\n",
+        "\n",
+        "nombre_archivo = \"Modelo_Excel.xlsx\"\n",
         "\n",
         "try:\n",
-        "    nombre_archivo = \"Modelo_Excel.xlsx\"\n",
         "    hojas = pd.read_excel(nombre_archivo, sheet_name=None, engine='openpyxl')\n",
         "    dfs = []\n",
         "\n",
         "    for nombre_hoja, df in hojas.items():\n",
+        "        print(f\"Procesando hoja: {nombre_hoja}\")\n",
         "        df = procesar_hoja(df, nombre_hoja)\n",
         "        dfs.append(df)\n",
         "\n",
         "    df_predicciones = dfs[-1][['Alumno']].copy()\n",
-        "    X = []\n",
-        "    y = []\n",
         "\n",
-        "    for idx, df in enumerate(dfs[:-1]):\n",
-        "        features = df.drop(columns=[\"Alumno\"]).values.tolist()\n",
-        "        for curso in dfs[0].columns[1:]:\n",
+        "    for curso in dfs[0].columns[1:]:\n",
+        "        print(f\"Entrenando modelo para: {curso}\")\n",
+        "\n",
+        "        X = []\n",
+        "        y = []\n",
+        "\n",
+        "        for idx, df in enumerate(dfs[:-1]):\n",
+        "            features = df.drop(columns=[\"Alumno\"]).values.tolist()\n",
         "            targets = dfs[idx+1][curso].values\n",
         "            X.extend(features)\n",
         "            y.extend(targets)\n",
         "\n",
-        "    X = np.array(X, dtype=np.float32)\n",
-        "    y = np.array(y, dtype=np.float32)\n",
+        "        X = np.array(X)\n",
+        "        y = np.array(y)\n",
         "\n",
-        "    model = keras.Sequential([\n",
-        "        keras.layers.Dense(128, activation='relu', input_shape=(X.shape[1],)),\n",
-        "        keras.layers.Dropout(0.3),\n",
-        "        keras.layers.Dense(64, activation='relu'),\n",
-        "        keras.layers.Dropout(0.2),\n",
-        "        keras.layers.Dense(32, activation='relu'),\n",
-        "        keras.layers.Dense(1)\n",
-        "    ])\n",
+        "        if model_existente and model.input_shape[1] == X.shape[1]:\n",
+        "            pass  # El modelo existente es compatible con los nuevos datos, no es necesario reconfigurarlo\n",
+        "        else:\n",
+        "            print(\"Creando un nuevo modelo...\")\n",
+        "            model = keras.Sequential([\n",
+        "                keras.layers.Dense(128, activation='relu', input_shape=(X.shape[1],)),\n",
+        "                keras.layers.Dropout(0.3),\n",
+        "                keras.layers.Dense(64, activation='relu'),\n",
+        "                keras.layers.Dropout(0.2),\n",
+        "                keras.layers.Dense(32, activation='relu'),\n",
+        "                keras.layers.Dense(1)\n",
+        "            ])\n",
+        "            model.compile(optimizer='adam', loss='mse', metrics=['mae'])\n",
         "\n",
-        "    model.compile(optimizer='adam', loss='mse', metrics=['mae'])\n",
-        "    early_stopping = tf.keras.callbacks.EarlyStopping(monitor='val_loss', patience=10)\n",
-        "    model.fit(X, y, epochs=100, validation_split=0.2, callbacks=[early_stopping])\n",
+        "        early_stopping = tf.keras.callbacks.EarlyStopping(monitor='val_loss', patience=10)\n",
+        "        \n",
+        "        X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+        "        model.fit(X_train, y_train, epochs=100, validation_data=(X_test, y_test), callbacks=[early_stopping])\n",
         "\n",
-        "    for curso in dfs[0].columns[1:]:\n",
-        "        predicciones = modelito.predict(dfs[-1].drop(columns=[\"Alumno\"]).values.astype(np.float32))\n",
+        "        predicciones = model.predict(dfs[-1].drop(columns=[\"Alumno\"]).values)\n",
         "        predicciones = np.clip(predicciones, 0, 20)\n",
-        "        df_predicciones[curso + ' Predicted'] = predicciones.flatten()\n",
+        "        df_predicciones[curso + ' Predicted'] = predicciones\n",
         "\n",
         "    for curso in df_predicciones.columns[1:]:\n",
         "        df_predicciones[curso] = df_predicciones[curso].apply(lambda x: round(x, 2))\n",
         "\n",
-        "    guardar_en_excel(df_predicciones)\n",
-        "    #model.save('my_single_model.h5')\n",
+        "    model.save(modelo_guardado_path)\n",
         "\n",
         "except Exception as e:\n",
-        "    print(f\"Error al leer el archivo: {e}\")\n"
+        "    print(f\"Error al leer el archivo: {e}\")"
       ]
     }
   ],
