--- a/CodeFinal.ipynb
+++ b/CodeFinal.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -46,9 +46,13 @@
         "import tensorflow as tf\n",
         "from tensorflow import keras\n",
         "from tensorflow.keras import regularizers\n",
-        "from tensorflow.keras.callbacks import ReduceLROnPlateau, ModelCheckpoint\n",
+        "from tensorflow.keras.callbacks import ReduceLROnPlateau, EarlyStopping, ModelCheckpoint\n",
         "from sklearn.model_selection import train_test_split\n",
-        "from openpyxl.worksheet.dimensions import DimensionHolder, ColumnDimension\n",
+        "import matplotlib.pyplot as plt\n",
+        "import unicodedata\n",
+        "\n",
+        "def strip_accents(text):\n",
+        "    return ''.join(c for c in unicodedata.normalize('NFD', text) if unicodedata.category(c) != 'Mn')\n",
         "\n",
         "def ajustar_valores(valor):\n",
         "    try:\n",
@@ -68,50 +72,45 @@
         "        keras.layers.Dense(256, activation='relu', kernel_regularizer=regularizers.l2(0.001), input_shape=input_shape),\n",
         "        keras.layers.BatchNormalization(),\n",
         "        keras.layers.Dropout(0.3),\n",
-        "        \n",
         "        keras.layers.Dense(128, activation='relu', kernel_regularizer=regularizers.l2(0.001)),\n",
         "        keras.layers.BatchNormalization(),\n",
         "        keras.layers.Dropout(0.3),\n",
-        "        \n",
         "        keras.layers.Dense(64, activation='relu', kernel_regularizer=regularizers.l2(0.001)),\n",
         "        keras.layers.BatchNormalization(),\n",
         "        keras.layers.Dropout(0.2),\n",
-        "        \n",
         "        keras.layers.Dense(32, activation='relu', kernel_regularizer=regularizers.l2(0.001)),\n",
         "        keras.layers.BatchNormalization(),\n",
-        "        \n",
         "        keras.layers.Dense(1)\n",
         "    ])\n",
         "    optimizer = tf.keras.optimizers.Adam(learning_rate=0.001)\n",
         "    model.compile(optimizer=optimizer, loss='mse', metrics=['mae'])\n",
         "    return model\n",
         "\n",
+        "def ajustar_ancho_columnas(ws):\n",
+        "    for column in ws.columns:\n",
+        "        max_length = 0\n",
+        "        column = [cell for cell in column]\n",
+        "        for cell in column:\n",
+        "            try:\n",
+        "                if len(str(cell.value)) > max_length:\n",
+        "                    max_length = len(cell.value)\n",
+        "            except:\n",
+        "                pass\n",
+        "        adjusted_width = (max_length + 2)\n",
+        "        ws.column_dimensions[column[0].column_letter].width = adjusted_width\n",
+        "\n",
         "def guardar_en_excel(df_predicciones):\n",
         "    file_path = \"resultados_predicciones.xlsx\"\n",
-        "    \n",
         "    with pd.ExcelWriter(file_path, engine='openpyxl') as writer:\n",
         "        df_predicciones.to_excel(writer, sheet_name=\"ACADEMAI\", index=False)\n",
         "        \n",
-        "        for column in writer.sheets[\"ACADEMAI\"].columns:\n",
-        "            max_length = 0\n",
-        "            column = [cell for cell in column]\n",
-        "            for cell in column:\n",
-        "                try:\n",
-        "                    if len(str(cell.value)) > max_length:\n",
-        "                        max_length = len(cell.value)\n",
-        "                except:\n",
-        "                    pass\n",
-        "            adjusted_width = (max_length + 2)\n",
-        "            writer.sheets[\"ACADEMAI\"].column_dimensions[column[0].column_letter].width = adjusted_width\n",
-        "\n",
-        "modelo_guardado_path = 'my_model.h5'\n",
-        "model_existente = os.path.exists(modelo_guardado_path)\n",
-        "\n",
-        "if model_existente:\n",
-        "    print(\"Cargando modelo existente...\")\n",
-        "    model = keras.models.load_model(modelo_guardado_path)\n",
+        "        # Ajustar el ancho de las columnas para que se ajuste al contenido\n",
+        "        ws = writer.sheets['ACADEMAI']\n",
+        "        ajustar_ancho_columnas(ws)\n",
         "\n",
         "nombre_archivo = \"Notas.xlsx\"\n",
+        "mse_results = {}\n",
+        "mae_results = {}\n",
         "\n",
         "try:\n",
         "    hojas = pd.read_excel(nombre_archivo, sheet_name=None, engine='openpyxl')\n",
@@ -125,7 +124,22 @@
         "    df_predicciones = dfs[-1][['Alumno']].copy()\n",
         "\n",
         "    for curso in dfs[0].columns[1:]:\n",
-        "        print(f\"Entrenando modelo para: {curso}\")\n",
+        "        curso_sin_tildes = strip_accents(curso)\n",
+        "        modelo_guardado_path = f\"model_{curso_sin_tildes}.h5\"\n",
+        "        \n",
+        "        model_existente = os.path.exists(modelo_guardado_path)\n",
+        "\n",
+        "        if model_existente:\n",
+        "            print(f\"Cargando modelo existente para {curso}...\")\n",
+        "            try:\n",
+        "                model = keras.models.load_model(modelo_guardado_path)\n",
+        "            except UnicodeDecodeError:\n",
+        "                print(f\"Error al cargar el modelo para {curso}. Creando un nuevo modelo.\")\n",
+        "                model = build_optimized_model((dfs[0].shape[1] - 1,))\n",
+        "\n",
+        "        else:\n",
+        "            print(f\"Creando un nuevo modelo para {curso}...\")\n",
+        "            model = build_optimized_model((dfs[0].shape[1] - 1,))\n",
         "\n",
         "        X = []\n",
         "        y = []\n",
@@ -139,20 +153,18 @@
         "        X = np.array(X)\n",
         "        y = np.array(y)\n",
         "\n",
-        "        if model_existente and model.input_shape[1] == X.shape[1]:\n",
-        "            pass\n",
-        "        else:\n",
-        "            print(\"Creando un nuevo modelo...\")\n",
-        "            model = build_optimized_model((X.shape[1],))\n",
-        "\n",
-        "        early_stopping = tf.keras.callbacks.EarlyStopping(monitor='val_loss', patience=10)\n",
+        "        early_stopping = EarlyStopping(monitor='val_loss', patience=10)\n",
         "        reduce_lr = ReduceLROnPlateau(monitor='val_loss', factor=0.2, patience=5, min_lr=0.0001)\n",
         "        model_checkpoint = ModelCheckpoint(modelo_guardado_path, save_best_only=True, monitor='val_loss', mode='min')\n",
         "\n",
         "        callbacks_list = [early_stopping, reduce_lr, model_checkpoint]\n",
         "\n",
         "        X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
-        "        model.fit(X_train, y_train, epochs=100, batch_size=32, validation_data=(X_test, y_test), callbacks=callbacks_list)\n",
+        "\n",
+        "        history = model.fit(X_train, y_train, epochs=100, batch_size=32, validation_data=(X_test, y_test), callbacks=callbacks_list)\n",
+        "\n",
+        "        mse_results[curso] = history.history['val_loss'][-1]\n",
+        "        mae_results[curso] = history.history['val_mae'][-1]\n",
         "\n",
         "        predicciones = model.predict(dfs[-1].drop(columns=[\"Alumno\"]).values)\n",
         "        predicciones = np.clip(predicciones, 0, 20)\n",
@@ -162,7 +174,14 @@
         "        df_predicciones[curso] = df_predicciones[curso].apply(lambda x: round(x, 2))\n",
         "\n",
         "    guardar_en_excel(df_predicciones)\n",
-        "    model.save(modelo_guardado_path)\n",
+        "\n",
+        "    plt.bar(mse_results.keys(), mse_results.values())\n",
+        "    plt.ylabel('MSE')\n",
+        "    plt.title('MSE por curso')\n",
+        "    plt.show()\n",
+        "\n",
+        "    mae_avg_percent = 100 - (np.mean(list(mae_results.values())) / 20 * 100)\n",
+        "    print(f\"El MAE promedio como porcentaje del rango de calificaciones es aproximadamente {mae_avg_percent:.2f}%.\")\n",
         "\n",
         "except Exception as e:\n",
         "    print(f\"Error al leer el archivo: {e}\")\n"
